frontend/test/should_fail/execscope_IfThenPart.grg
using exectype;

rule r
{
	modify  {
		exec(if{x:string="Gnampf!"; x:int=42; y:foo=foo::Bar});
	}
}